# libraqm

./: .appveyor.yml  .dockerfile  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt~  CODING.md  LICENSE.txt  Makefile  Makefile.am  NEWS  README  README.md  annotation-glossary.html  api-index-0-1.html  api-index-0-10.html  api-index-0-2.html  api-index-0-3.html  api-index-0-6.html  api-index-0-7.html  api-index-0-8.html  api-index-0-9.html  api-index-full.html  autogen.sh  bsom.cpp  ch01.html  config.h.cmake  configure.ac  documentation for msys.txt  git.mk  index.html  meson.build  meson_options.txt  raqm-Raqm.html  raqm-test.c  raqm.c  raqm.devhelp2  raqm.h  raqm.pc.cmake.in  (+3 more)
.ci/: deploy-docs.sh
.github/workflows/: ci.yml
cmake/: FindGtkDoc.cmake
cmake/modules/: FindGtkDoc.cmake  GtkDocConfigVersion.cmake
docs/: CMakeLists.txt  CMakeLists.txt~  Makefile.am  meson.build  raqm-docs.cmake.xml.in  raqm-docs.xml  raqm-sections.txt  version.xml.in
m4/: ax_compiler_flags_cflags.m4
scripts/: gen-grapheme-data.py
src/: CMakeLists.txt  Makefile.am  Makefile.sources  grapheme-data.h  meson.build  raqm-version.h.in  raqm.c  raqm.h  reorder_runs.c  reorder_runs.h
subprojects/: freetype2.wrap  fribidi.wrap  harfbuzz.wrap  sheenbidi.wrap
tests/: CMakeLists.txt  Makefile.am  Makefile.sources  baselines.test  buffer-flags-1.test  cursor-position-2.test  cursor-position-3.test  cursor-position-4.test  cursor-position-GB3.test  cursor-position-GB4.test  cursor-position-GB5.test  cursor-position-GB8a.test  cursor-position-GB9.test  cursor-position-GB9a.test  cursor_position1.result  cursor_position1.test  cursor_position2.test  cursor_position3.test  cursor_position4.test  cursor_position_GB3.result  cursor_position_GB3.test  cursor_position_GB4.test  cursor_position_GB5.test  cursor_position_GB8a.test  cursor_position_GB9.test  cursor_position_GB9a.test  detected-direction-test.c  direction-ltr-1.test  direction-ltr-2.test  direction-ltr-3.test  direction-ltr-4.test  direction-ltr-5.test  direction-neutral-1.test  direction-rtl-1.test  direction-rtl-2.test  direction-rtl-3.test  direction-rtl-4.test  direction-rtl-5.test  direction-ttb-1.test  direction-ttb-2.test  (+73 more)
win/: readme.txt
win/include/: glibconfig.h
win/include/freetype2/freetype/config/: ftconfig.h  ftoption.h
win/include/fribidi/: fribidi-config.h
win/include/glib-2.0/glib/: gmacros.h  gutils.h
win/include/harfbuzz/: hb-gobject-enums.h
win/lib/windows32/: libfreetype-6.lib  libfribidi.lib  libglib-2.0-0.lib  libharfbuzz-0.lib
win/lib/windows64/: libfreetype-6.lib  libfribidi.lib  libglib-2.0-0.lib  libharfbuzz-0.lib
