option(
    'docs',
    description: 'Build API reference using GTK-Doc',
    type: 'boolean',
    value: false,
)

option(
    'tests',
    description: 'Enable or disable tests',
    type: 'boolean',
    value: true,
)

option(
    'sheenbidi',
    description: 'Use SheenBidi instead of Fribidi',
    type: 'boolean',
    value: false,
)
